Add network post

--- a/_posts/Kubernetes/2020-8-15-k8s-deploy.md
+++ b/_posts/Kubernetes/2020-8-15-k8s-deploy.md
@@ -18,10 +18,10 @@ permalink: /Ubuntu/k8sDeploy
 {:toc}
 
 ### 系统介绍
-| HOSTNAME | IP ADDR | 虚拟机OS | Specifications |
-| --- | --- | --- | --- |
-| kube-master | 192.168.43.174 | ubunru 16.04 | 1核4G |
-| kube-node1 | 192.168.43.175 | ubunru 16.04 | 1核4G |
+HOSTNAME | IP ADDR | 虚拟机OS | Specifications
+:-: | :-: | :-: | :-:
+kube-master | 192.168.43.174 | ubunru 16.04 | 1核4G
+kube-node1 | 192.168.43.175 | ubunru 16.04 | 1核4G
 
 注：CPU/内存要求至少2核/2G，但由于我们是用于测试操作用，不做生产用，选用1核也可以完成部署。
 
@@ -34,13 +34,13 @@ ufw disable
 ```
 
 ##### 修改对应主机名（2台主机）
-修改方式参见《Ubuntu常用基础知识点》一文
+修改方式参见[Ubuntu常用基础知识点](http://we.wewelove.cn/Ubuntu/generalBasics) 一文
 
 ##### 新增对应主机名及映射IP（2台主机）
-修改方式参见《Ubuntu常用基础知识点》一文
+修改方式参见s[Ubuntu常用基础知识点](http://we.wewelove.cn/Ubuntu/generalBasics) 一文
 
 ##### 时钟同步（2台主机）
-修改方式参见《Ubuntu常用基础知识点》一文：
+修改方式参见[Ubuntu常用基础知识点](http://we.wewelove.cn/Ubuntu/generalBasics) 一文：
 - 在k8s-master（192.168.43.174）机器上安装NTP
 - 在k8s-node1（192.168.43.175）机器上安装ntpdate
 - 在k8s-node1配置Crontab定时同步任务（可选）
@@ -67,11 +67,12 @@ add-apt-repository "deb [arch=amd64] https://mirrors.aliyun.com/docker-ce/linux/
 apt-get -y install docker-ce=18.06.2~ce~3-0~ubuntu
 ```
 使用`docker info `指令查看docker安装成功后的系统信息
-![查看docker信息](/images/posts/kubernetes/time_op1_1.jpg "查看docker信息")
+![查看docker信息](/images/posts/kubernetes/docker_info.png "查看docker信息")
 
 ##### kubelet，kubeadm和kubectl安装(2台主机，版本：1.15.0-00)
 使用kubeadm工具部署k8s集群，需要访问google拉取kubelet等相关组件的镜像，由于镜像站点在国外，访问速度慢，
-镜像拉取常常不成功，导致集群自动化部署失败。因此，国内用户可选用访问[阿里云镜像站点][1]获取k8s镜像。
+镜像拉取常常不成功，导致集群自动化部署失败。因此，国内用户可选用访问[阿里云镜像站点](https://developer.aliyun.com/mirror/)
+获取k8s镜像。
 ```
 curl https://mirrors.aliyun.com/kubernetes/apt/doc/apt-key.gpg | apt-key add - 
 cat <<EOF >/etc/apt/sources.list.d/kubernetes.list
@@ -83,5 +84,3 @@ apt-get install -y kubelet=1.15.0-00 kubeadm=1.15.0-00 kubectl=1.15.0-00
 apt-mark hold kubelet=1.15.0-00 kubeadm=1.15.0-00 kubectl=1.15.0-00
 ```
 
-Reference links:
-[1] https://developer.aliyun.com/mirror/ "阿里云镜像站"
