fix some formats

--- a/_posts/Kubernetes/2020-8-15-k8s-deploy.md
+++ b/_posts/Kubernetes/2020-8-15-k8s-deploy.md
@@ -9,7 +9,9 @@ permalink: /Ubuntu/k8sDeploy
 目前官方提供了3种部署Kubernetes（下面简写k8s）的方式：minikube，kubeadm和二进制包。
 - minikube：用于自动化部署单节点k8s的工具，主要用于测试环境学习使用，不可用于生产环境
 - kubeadm：用于自动化部署多节点k8s集群的工具，可用于生产环境，使用简单，利于初学者入门
-- 二进制包：手动安装，非自动化部署，可用于生产环境需要感知每个组件及组件间的配置细节，遇到问题较难排查，但有利于全面理解k8s
+- 二进制包：手动安装，非自动化部署，可用于生产环境需要感知每个组件及组件间的配置细节，遇
+到问题较难排查，但有利于全面理解k8s
+
 本文为初学者展示如何使用kubeadm工具快速部署k8s集群，帮助初学者快速入门实践。
 
 **目录**
@@ -34,13 +36,13 @@ ufw disable
 ```
 
 ##### 修改对应主机名（2台主机）
-修改方式参见[Ubuntu常用基础知识点](http://we.wewelove.cn/Ubuntu/generalBasics) 一文
+修改方式参见 [Ubuntu常用基础知识点](http://we.wewelove.cn/Ubuntu/generalBasics) 一文
 
 ##### 新增对应主机名及映射IP（2台主机）
-修改方式参见s[Ubuntu常用基础知识点](http://we.wewelove.cn/Ubuntu/generalBasics) 一文
+修改方式参见 [Ubuntu常用基础知识点](http://we.wewelove.cn/Ubuntu/generalBasics) 一文
 
 ##### 时钟同步（2台主机）
-修改方式参见[Ubuntu常用基础知识点](http://we.wewelove.cn/Ubuntu/generalBasics) 一文：
+修改方式参见 [Ubuntu常用基础知识点](http://we.wewelove.cn/Ubuntu/generalBasics) 一文：
 - 在k8s-master（192.168.43.174）机器上安装NTP
 - 在k8s-node1（192.168.43.175）机器上安装ntpdate
 - 在k8s-node1配置Crontab定时同步任务（可选）
@@ -71,7 +73,7 @@ apt-get -y install docker-ce=18.06.2~ce~3-0~ubuntu
 
 ##### kubelet，kubeadm和kubectl安装(2台主机，版本：1.15.0-00)
 使用kubeadm工具部署k8s集群，需要访问google拉取kubelet等相关组件的镜像，由于镜像站点在国外，访问速度慢，
-镜像拉取常常不成功，导致集群自动化部署失败。因此，国内用户可选用访问[阿里云镜像站点](https://developer.aliyun.com/mirror/)
+镜像拉取常常不成功，导致集群自动化部署失败。因此，国内用户可选用访问 [阿里云镜像站点](https://developer.aliyun.com/mirror/)
 获取k8s镜像。
 ```
 curl https://mirrors.aliyun.com/kubernetes/apt/doc/apt-key.gpg | apt-key add - 
