add some ops for git use blog

--- a/_posts/Git/2020-10-22-git-use.md
+++ b/_posts/Git/2020-10-22-git-use.md
@@ -119,4 +119,27 @@ git branch -d [branch]
 git push [remote] :[remote-branch] 或 git push origin --delete [remote-branch]
 ```
 
+### 撤销操作
+git commit --amend 命令, 可以用来修改最后一条提交 commit message, 也可以追加新的修改，
+一旦不小心提交了错误的amend信息，我们要如何回退呢？
+```
+# 首先使用git reflog命令查看操作记录
+62f78df (HEAD -> master) HEAD@{0}: commit (amend): update some contents
+d538f53 (origin/master, origin/HEAD) HEAD@{1}: commit (amend): update some contents
+12205b2 HEAD@{2}: commit: update some contents
+3c18410 HEAD@{3}: commit (amend): prometheus + grafana deploy
+c069248 HEAD@{4}: commit: prometheus + grafana deploy
+...
+
+看到 amend 操作之前的最后一个操作就是 HEAD@{1}.
+
+# 然后使用 git reset 将当前分支的 HEAD 指向 HEAD@{1}, 即可撤销错误的 amend 操作
+git reset HEAD@{1}
+
+# 撤销完成后，发现修改的内容回退到了工作区，此时可以做其他操作，如git add等
+# 如果想撤销到暂存区, 就用 git reset --soft HEAD@{1}.
+# 如果想干掉这个修改, 就用 git reset --hard HEAD@{1} .
+```
+
+
 
