add some ops for git use

--- a/_posts/Git/2020-10-22-git-use.md
+++ b/_posts/Git/2020-10-22-git-use.md
@@ -141,5 +141,17 @@ git reset HEAD@{1}
 # 如果想干掉这个修改, 就用 git reset --hard HEAD@{1} .
 ```
 
+恢复暂存区的指定文件到工作区
+```
+git checkout [file]
+```
 
-
+恢复暂存区当前目录的所有文件到工作区
+```
+git checkout .
+```
+​
+恢复工作区到指定 commit
+```
+git checkout commitid
+```
